--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,12 @@
 @tailwind base;
-@tailwind components;
-@tailwind utilities;
+@tailwind components;@tailwind utilities;
+
+/* Maple Bear SAF Design System - Cores em HSL */
 
 @import './styles/spacing.css';
 @import './styles/typography.css';
 @import './styles/borders.css';
 @import './styles/responsive.css';
-
-/* Maple Bear SAF Design System - Cores em HSL */
 
 @layer base {
   :root {
